<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        android:foreground="?attr/selectableItemBackground"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#fff">
            <ImageView
                android:id="@+id/iv_photo"
                android:src="@drawable/profile"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/friend_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/school"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>